apps/outline/outline/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline-server
  namespace: outline
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: outline
    app.kubernetes.io/instance: outline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: outline
      app.kubernetes.io/instance: outline
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: outline
        app.kubernetes.io/instance: outline
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: outline
          image: outlinewiki/outline:1.10.1
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /_health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /_health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /_health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1024Mi
