apps/outline/outline/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline
  namespace: outline
spec:
  parentRefs:
    - name: outline
      kind: ListenerSet
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: outline-server
          port: 3000
